--- a/Personal_site.html
+++ b/Personal_site.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Personal cv</title>
   </head>
-  <body>
+  <body style="font-size:14pts">
       <table cellspacing="20" >
         <tbody>
           <tr>
